added favicon in html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <title>Louzon Cooper Wedding</title>
   <meta name="viewport" content="width=device-width">
-
+  <link rel="icon"
+      type="image/png"
+      href="/favicon.png">
   <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
   <link href="http://addtocalendar.com/atc/1.5/atc-style-blue.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="/node_modules/vegas/dist/vegas.min.css">
