--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
         <p>Bob and Sammi are finally getting married!</p>
         <!-- <p>When: Saturday May 28th, 2016 at 5pm</p> -->
-        <p>Where: Frankenmeuth Brewery in Frankenmeuth, MI (Ceremony at 5pm).</p>
-        <p>If you want to stay in town, try and book a room as soon as possible.
-           It is a popular weekend and we could not get a hotel block.</p>
+        <p>Where: Frankenmeuth Brewery in Frankenmeuth, MI (Ceremony starts at 5pm).</p>
+        <p>If you want to stay in town after the wedding, we recommend you try and book a
+          room as soon as possible. (We cannot reserve hotel blocks due to the holiday weekend)</p>
         <!-- <p>If you have any questions or ceremony ideas, please contact
           Jennifer Ryan at jlouzon@gmail.com -->
         </p>
